partway through writing, fixed desc formatting

--- a/bathroom.html
+++ b/bathroom.html
@@ -10,7 +10,7 @@
                               +-------+
                               |*|     |
                               +-+     |
-                              |o|  &  |
+                              |o|  <span class="ampersand">&</span>  |
                               +-+     +-+####++
                               |0      |       |
                               +--+<a href="hallway.html">##</a>+-+       +
@@ -21,8 +21,16 @@
                                       |       |
                                       |.......+
                                       |
+<div class="description">
+<p>You're in the bathroom.</p>
+
+<p>The floor and walls and ceiling are white tile, and there is a stripe of blue tile going all around the room at eye level.</p>
+
+<p>To the left, there's a toilet stall (0), a counter with a sink (o), and a shower stall (*).</p>
 
 </div>
+</div>
+
 
 
 </body>
