--- a/bedroom.html
+++ b/bedroom.html
@@ -14,15 +14,19 @@
                                       +-+####++
                                       |       +-----------------+
                               +--+##+-+       +   uuuu         i|
-                              #               <a href="hallway.html">#</a>         U   ee i|
-                              +               +    s  &    hee i|
-                              ++#+----+       |mmm   s      ee i|
-                                      |       |mmmeeeeeeeeee   i|
-                                      |       |mmmeeeeeeeeee   i|
+                              #               <a href="hallway.html">#</a>         <span class="U">U</span>   <span class="desk2">ee</span> i|
+                              +               +    <span class="s">s</span>  <span class="ampersand">&</span>    h<span class="desk2">ee</span> i|
+                              ++#+----+       |mmm   <span class="s">s</span>      <span class="desk2">ee</span> i|
+                                      |       |mmm<span class="desk1">eeeeeeeeee</span>   i|
+                                      |       |mmm<span class="desk1">eeeeeeeeee</span>   i|
                                       |.......+-----------------+
                                       |
 
+<div class="description">
+<p>You're in a bedroom. There's another non-functional fireplace (u), a bed (m), a chair (h), and two desks (e).</p>
+
 </div>
 
+</div>
 
 </body>
