--- a/coat.html
+++ b/coat.html
@@ -26,10 +26,15 @@
                                   +---+         HHHHHHHH       m i]
                                   #   .dd                      m i]
                               +---+   .                        mmi|
-                              | & <a href="index.html">#</a>   .         mmm  mmm         i|
+                              | <span class="ampersand">&</span> <a href="index.html">#</a>   .         mmm  mmm         i|
                               +-------+         m m  m m         i|
                                       +-+####+------uuuu----------+
+
+<div class="description">
+You're in a coat closet. There's a hanger rod in here, but there's nothing on it. <br>There's a minifridge in here, but it's not plugged in or anything. <br>It's dark in here.
 </div>
+</div>
+
 
 
 </body>
