--- a/gabby.html
+++ b/gabby.html
@@ -22,14 +22,19 @@
                                       +.......+-------------------+
                                       |        m       m xx vvvvv |
                   +---------------+---+        mmmmmmmmm xx      i|
-                  |               |   |                        mmi]
-                  |               #   |         HHHHHHHH       mgi]
-                  |      &        +---+         HHHHHHHH       m i]
+                  | <span class="bed">mmmmmmmm</span>      |   |                        mmi]
+                  | <span class="bed">mmmmmmmm</span>      #   |         HHHHHHHH       mgi]
+                  |      <span class="ampersand">&</span>        +---+         HHHHHHHH       m i]
                   |               <a href="index.html">#</a>   .dd                      m i]
                   +---------------+   .                        mmi|
                                   #   .         mmm  mmm         i|
                                   +---+         m m  m m         i|
                                       +-+####+------uuuu----------+
+
+<div class="description">
+
+
+</div>
 
 </div>
 
