--- a/hallway.html
+++ b/hallway.html
@@ -16,12 +16,16 @@
                               +--+<a href="bathroom.html">##</a>+-+       +
                               <a href="storage.html">#</a>               <a href="bedroom.html">#</a>
                               +               +
-                              ++<a href="printshop.html">#</a>+----+   &   |
+                              ++<a href="printshop.html">#</a>+----+   <span class="ampersand">&</span>   |
                                       |       |
                                       |       |
                                       +<a href="index.html">.......</a>+-
                                       |
 
+<div class="description">
+You're in the hallway.
+
+</div>
 </div>
 
 
