--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+
 <div class="ascii">
 
 
@@ -19,15 +20,25 @@
 
                                       |       |
                                       +<a href="hallway.html">.......</a>+-------------------+
-                                      |        m       m xx vvvvv |
-                                      |        mmmmmmmmm xx      i|
+                                      |        m       m <span class="minifridge">xx</span> vvvvv |
+                                      |        <span class="couch">mmmmmmmmm</span> <span class="minifridge">xx</span>      i|
                                       |                        mmi]
-                                      |         HHHHHHHH       mgi]
-                                  +---+         HHHHHHHH       m i]
-                                  <a href="gabby.html">#</a>   .dd                      m i]
-                                  +   .     &                  mmi|
-                                  <a href="coat.html">#</a>   .         mmm  mmm         i|
+                                      |         <span class="table">HHHHHHHH</span>       m<span class="guitar">g</span>i]
+                                  +---+         <span class="table">HHHHHHHH</span>       m i]
+                                  <a href="gabby.html">#</a>   .<span class="rainboots">dd</span>                      m i]
+                                  +   .     <span class="ampersand">&</span>                  mmi|
+                                  <a href="coat.html">#</a>   .         <span class="chairs">mmm  mmm</span>         i|
                                   ----+         m m  m m         i|
                                       +-+####+------uuuu----------+
-</pre>
+
+
+<div class="description">
+<p>You're in the common room. There's a coffee table (H), a fireplace that doesn't work (u), two chairs (m) and two couches (m).</p>
+<p>A radiator (i) near the windows (]) gives off a little heat. The ceiling is high. </p>
+<p>To your left, there's a vestibule with two doors (#). Directly in front of you is the entrance to the hallway (....).</p>
+
+</div>
+
+</div>
+
 </body>
