--- a/printshop.html
+++ b/printshop.html
@@ -19,11 +19,15 @@
                   +----------++<a href="hallway.html">#</a>++---+       |
                   [irrrrr``````  +   |       |
                   [irrrrr``````  c   |       |
-                  |iww```&`````  +   |.......+-
+                  |iww```<span class="ampersand">&</span>`````  +   |.......+-
                   |iww`````````  |   |
                   +--------------+---+
 
+<div class="description">
+
+
 </div>
 
+</div>
 
 </body>
