--- a/storage.html
+++ b/storage.html
@@ -14,13 +14,18 @@
                   +----------+       +-+####++
                   | mmmmmm   |       |       |
                   | mmmmmm   +--+##+-+       +
-                  |    &     <a href="hallway.html">#</a>               #
+                  |    <span class="ampersand">&</span>     <a href="hallway.html">#</a>               #
                   | vvvvvv   +               +
                   +----------++#+----+       |
                                      |       |
                                      |       |
                                      +.......+-
                                      |
+
+<div class="description">
+
+
+</div>
 </div>
 
 
