mar 2 more writing

--- a/bathroom.html
+++ b/bathroom.html
@@ -8,11 +8,11 @@
 
 <div class="ascii">
                               +-------+
-                              |*|     |
+                              <span class="shower">|*|</span>     |
                               +-+     |
-                              |o|  <span class="ampersand">&</span>  |
+                              <span class="sink">|o|</span>  <span class="ampersand">&</span>  |
                               +-+     +-+####++
-                              |0      |       |
+                              <span class="toilet">|0</span>      |       |
                               +--+<a href="hallway.html">##</a>+-+       +
                               #               #
                               +               +
