--- a/printshop.html
+++ b/printshop.html
@@ -17,14 +17,14 @@
                              #               #
                              +               +
                   +----------++<a href="hallway.html">#</a>++---+       |
-                  [irrrrr``````  +   |       |
-                  [irrrrr``````  c   |       |
-                  |iww```<span class="ampersand">&</span>`````  +   |.......+-
-                  |iww`````````  |   |
+                  [i<span class="springs">rrrrr</span>``````  +   |       |
+                  [i<span class="springs">rrrrr</span>``````  c   |       |
+                  |i<span class="printdesk">ww</span>```<span class="ampersand">&</span>`````  +   |.......+-
+                  |i<span class="printdesk">ww</span>`````````  |   |
                   +--------------+---+
 
 <div class="description">
-
+<p>A cold, empty room with nothing but a desk (w) and a bare springy bed support with no mattress or legs (r). The whole floor is covered in a plastic dropsheet (`). </p>
 
 </div>
 
