--- a/storage.html
+++ b/storage.html
@@ -12,10 +12,10 @@
 
 
                   +----------+       +-+####++
-                  | mmmmmm   |       |       |
-                  | mmmmmm   +--+##+-+       +
+                  | <span class="bed">mmmmmm</span>   |       |       |
+                  | <span class="bed">mmmmmm</span>   +--+##+-+       +
                   |    <span class="ampersand">&</span>     <a href="hallway.html">#</a>               #
-                  | vvvvvv   +               +
+                  | eeeeee   +               +
                   +----------++#+----+       |
                                      |       |
                                      |       |
@@ -23,7 +23,7 @@
                                      |
 
 <div class="description">
-
+<p>You're in a tiny bedroom with one small window facing toward the Green. There is a bed (m) and a desk (e) and not much else.</p>
 
 </div>
 </div>
