styling to dark mode

--- a/bathroom.html
+++ b/bathroom.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<header>Sid's Super Cool Empty Suite Tour 2k21</header>
 <div class="ascii">
                               +-------+
                               <span class="shower">|*|</span>     |
