--- a/hallway.html
+++ b/hallway.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<header>Sid's Super Cool Empty Suite Tour 2k21</header>
 <div class="ascii">
 
 
@@ -23,7 +23,7 @@
                                       |
 
 <div class="description">
-You're in the hallway.
+<p>You're in the hallway.</p>
 
 </div>
 </div>
