--- a/storage.html
+++ b/storage.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<header>Sid's Super Cool Empty Suite Tour 2k21</header>
 <div class="ascii">
 
 
@@ -13,9 +13,9 @@
 
                   +----------+       +-+####++
                   | <span class="bed">mmmmmm</span>   |       |       |
-                  | <span class="bed">mmmmmm</span>   +--+##+-+       +
+                  <span class="storagewindow">[</span> <span class="bed">mmmmmm</span>   +--+##+-+       +
                   |    <span class="ampersand">&</span>     <a href="hallway.html">#</a>               #
-                  | eeeeee   +               +
+                  | <span class="extradesks">eeeeee</span>   +               +
                   +----------++#+----+       |
                                      |       |
                                      |       |
