favicon and title

--- a/coat.html
+++ b/coat.html
@@ -2,6 +2,8 @@
 
 <head>
   <link rel="stylesheet" href="styles.css"/>
+  <title>Sid's Super Cool Empty Suite Tour 2k21</title>
+  <link rel="shortcut icon" href="https://cdn.glitch.com/28929110-ff3d-4cdc-8823-0134dc6813d4%2Ftinyfrog.png?v=1614113857361"/>
 </head>
 
 <body>
